--- a/App_in_51/app/src/main/res/layout/fragment_sculptures.xml
+++ b/App_in_51/app/src/main/res/layout/fragment_sculptures.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SculpturesFragment">
+    tools:context=".SculpturesFragment"
+    >
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
@@ -12,3 +13,4 @@
         android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
+
