--- a/App_in_51/app/src/main/res/values/styles.xml
+++ b/App_in_51/app/src/main/res/values/styles.xml
@@ -2,9 +2,10 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/mainColor</item>
+        <item name="colorPrimaryDark">@color/mainColor</item>
+        <item name="colorAccent">@color/mainColor</item>
+        <item name="buttonStyle">@style/defaultButton</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -15,5 +16,18 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    
+    <style name="defaultButton" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/buttonshape</item>
+        <item name="android:textColor">@color/colorDefaultButtonText</item>
+        <item name="android:shadowColor">@color/shadowColor</item>
+        <item name="android:shadowDx">2</item>
+        <item name="android:shadowDy">2</item>
+        <item name="android:shadowRadius">5</item>
+    </style>
+
 
 </resources>
+
+
+<!-- style -->
